# Visual-computing-project-Block-Puzzle-Tool

./: .gitignore  CMakeLists.txt  README.md
data/: block_0.json  block_1.json  block_2.json  block_3.json  block_4.json  block_5.json  block_6.json  block_7.json  block_gen.blend  testblock.json
include/: App.hpp  Background.hpp  Camera.hpp  Cube.hpp  DebugWindow.hpp  DirLight.hpp  GlfwWindow.hpp  InputSystem.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelData.hpp  ModelLoader.hpp  Object.hpp  PuzzleLoader.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  SolutionFinder.hpp  TextureData.hpp  Transform.hpp  UI.hpp  Vertex.hpp  entity.hpp  primitives.hpp
include/Components/: Background.hpp  BoundingBox.hpp  Button.hpp  Camera.hpp  CanvasElement.hpp  Children.hpp  DirLight.hpp  ExplodedView.hpp  Fill2D.hpp  Material.hpp  Model.hpp  ModelData.hpp  Parent.hpp  Piece.hpp  PiecesView.hpp  Puzzle.hpp  PuzzlePiece.hpp  RenderInfo.hpp  ScrollView.hpp  Shader.hpp  SinglePieceView.hpp  Solution.hpp  Transform.hpp  Transform2D.hpp  UICanvas.hpp  UIScene.hpp
include/Systems/: PieceViewSystem.hpp  PuzzleViewSystem.hpp  Renderer.hpp  UISystem.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/lib/: glfw3.lib
libs/tinyfiledialogs/include/: hello.c  hello_wchar_t.c  tinyfiledialogs.c
resources/data/: block_2.json  block_6.json  block_gen.blend  puzzle_test.json  test.txt
resources/mesh/: block_7.json  block_gen.blend1
resources/models/wooden-cube/: wooden-cube.blend  wooden-cube.blend1  wooden-cube.mtl
shaders/: shader.frag  shader.vert
shaders/composite/: composite.frag  composite.vert
shaders/fill/: fill.frag  fill.vert
shaders/phong/: phong.frag  phong.vert
shaders/phongtransparent/: phongtransparent.frag  phongtransparent.vert
shaders/screen/: screen.frag  screen.vert
shaders/shadowmap/: shadowmap.vert
src/: App.cpp  Camera.cpp  DebugWindow.cpp  GlfwWindow.cpp  InputSystem.cpp  ModelLoader.cpp  PieceViewSystem.cpp  PuzzleLoader.cpp  PuzzleViewSystem.cpp  Renderer.cpp  Shader.cpp  SolutionFinder.cpp  Transform.cpp  UI.cpp  UISystem.cpp  entity.cpp  main.cpp
